--- a/src/styles_upon_styles.css
+++ b/src/styles_upon_styles.css
@@ -21,17 +21,13 @@
 
 /* Main styles */
 :root {
-    font-size: 19px;
+    font-size: 17px;
     font-family: var(--f-family);
 }
 
-@media (max-width: 896px) {
-    :root {
-        font-size: 17px;
-    }
-}
-
 body {
+    padding: 0 0.5rem;
+    line-height: 1.3;
     margin: auto;
     margin-bottom: 5rem;
     max-width: 30rem;
@@ -40,7 +36,7 @@ body {
 }
 
 p, .saying-quote {
-    margin-bottom: 0.7rem;
+    margin-bottom: 0.8rem;
     margin-top: 0.5rem;
 }
 
@@ -48,14 +44,9 @@ p, .saying-quote {
     font-style: italic;
 }
 
-h3 + p {
-    margin-top: 2rem;
-}
-
 h1, h2, h3 {
     font-family: var(--f-alt-family);
     font-weight: 300;
-    margin-bottom: 1rem;
 }
 
 h2 {
@@ -64,26 +55,18 @@ h2 {
     padding-top: 0.7rem;
 }
 
+h2:first-of-type {
+    margin-top: 2rem;
+}
+
 .book-counter {
-    margin-left: -6rem;
-    float: left;
-    clear: left;
-    margin-top: 0;
-    margin-bottom: 0;
-    vertical-align: top;
-    position: relative;
+    margin-right: 1rem;
 }
 
 h3.section-heading {
     color: var(--f-alt-color);
     font-size: 1rem;
-    margin-left: -3rem;
-    float: left;
-    clear: left;
-    margin-top: 1.3rem;
-    margin-bottom: 0;
-    vertical-align: top;
-    position: relative;
+    margin-top: 2rem;
 }
 
 .title {
@@ -121,3 +104,35 @@ h3.section-heading {
 /* squo-open-pull { */
 /*     margin-left: -0.25em; */
 /* } */
+
+/* Desktop styles */
+@media (min-width: 896px) {
+    :root {
+        font-size: 19px;
+    }
+
+    .book-counter {
+        margin-left: -6rem;
+        float: left;
+        clear: left;
+        margin-top: 0;
+        margin-bottom: 0;
+        vertical-align: top;
+        position: relative;
+    }
+
+    h3.section-heading {
+        margin-left: -3rem;
+        float: left;
+        clear: left;
+        margin-top: 1.3rem;
+        margin-bottom: 0;
+        vertical-align: top;
+        position: relative;
+    }
+
+    h3 + p {
+        margin-top: 2rem;
+    }
+}
+
