--- a/src/styles_upon_styles.css
+++ b/src/styles_upon_styles.css
@@ -26,18 +26,27 @@
 }
 
 body {
-    padding: 0 0.5rem;
+    padding: 0.5rem;
     line-height: 1.3;
     margin: auto;
     margin-bottom: 5rem;
     max-width: 30rem;
     background-color: var(--bg);
     color: var(--f-color);
+
+    /* yet-to-be-supported styles */
+    text-wrap: pretty;
+    hanging-punctuation: first last allow-end;
 }
 
 p, .saying-quote {
     margin-bottom: 0.8rem;
     margin-top: 0.5rem;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 .saying-quote {
@@ -60,7 +69,14 @@ h2:first-of-type {
 }
 
 .book-counter {
-    margin-right: 1rem;
+    /* margin-right: 0.5rem; */
+}
+
+.book-counter::after {
+    margin-left: 0.5rem;
+    margin-right: 0.6rem;
+    content: "◊";
+    opacity: 50%;
 }
 
 h3.section-heading {
@@ -119,6 +135,10 @@ h3.section-heading {
         margin-bottom: 0;
         vertical-align: top;
         position: relative;
+    }
+
+    .book-counter::after {
+        content: "";
     }
 
     h3.section-heading {
