Book 5; fix top margin for sections beginning with a blockquote

--- a/src/styles_upon_styles.css
+++ b/src/styles_upon_styles.css
@@ -151,7 +151,7 @@ h3.section-heading {
         position: relative;
     }
 
-    h3 + p {
+    h3 + p, h3 + blockquote {
         margin-top: 2rem;
     }
 }
