--- a/src/styles_upon_styles.css
+++ b/src/styles_upon_styles.css
@@ -29,7 +29,7 @@ body {
     padding: 0.5rem;
     line-height: 1.3;
     margin: auto;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     max-width: 32rem;
     background-color: var(--bg);
     color: var(--f-color);
@@ -39,7 +39,7 @@ body {
     hanging-punctuation: first last allow-end;
 }
 
-p, .saying-quote {
+p, .saying-quote, .epigram {
     margin-bottom: 0.8rem;
     margin-top: 0.5rem;
 }
@@ -93,6 +93,17 @@ h3.section-heading {
     margin-top: 2rem;
 }
 
+h3.epigram-heading {
+    color: var(--f-alt-color);
+    font-size: 1rem;
+    margin-top: 1.5rem;
+    margin-bottom: 0;
+}
+
+p.epigram-body {
+    margin: 0;
+}
+
 .title {
     margin-bottom: 0;
 }
@@ -101,6 +112,7 @@ h3.section-heading {
     margin-top: 0.3rem;
     font-family: var(--f-alt-family);
     font-weight: 300;
+    font-size: 1.2rem;
 }
 
 .syllogism {
@@ -109,7 +121,43 @@ h3.section-heading {
 .syllogism .prop {
 }
 
+main nav a {
+    text-decoration: underline;
+    text-decoration-style: dotted;
+}
+
+main nav a:hover {
+    text-decoration: underline;
+    text-decoration-style: solid;
+}
+
+footer nav {
+    margin-top: 5rem;
+    border-top: 1px dotted var(--rule);
+    padding-top: 0.7rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+footer nav div {
+    text-align: center;
+    border-left: 1px dotted var(--rule);
+    flex: 1;
+    font-family: var(--f-alt-family);
+    color: var(--f-alt-color);
+}
+
+footer nav div:last-of-type {
+    border-right: 1px dotted var(--rule);
+}
+
 /* snarfed from Butterick */
+/* squo { */
+/*     margin-left: -0.25em; */
+/* } */
+/* dquo { */
+/*     margin-left: -0.50em; */
+/* } */
 /* dquo-open-push, squo-open-push { */
 /*     display: initial; } */
 
@@ -155,6 +203,16 @@ h3.section-heading {
         clear: left;
         margin-top: 1.3rem;
         margin-bottom: 0;
+        vertical-align: top;
+        position: relative;
+    }
+
+    h3.epigram-heading {
+        margin-left: -2rem;
+        float: left;
+        clear: left;
+        margin-bottom: 0;
+        margin-top: 0;
         vertical-align: top;
         position: relative;
     }
