--- a/src/styles_upon_styles.css
+++ b/src/styles_upon_styles.css
@@ -21,7 +21,7 @@
 
 /* Main styles */
 :root {
-    font-size: 17px;
+    font-size: 24px;
     font-family: var(--f-family);
 }
 
@@ -30,7 +30,7 @@ body {
     line-height: 1.3;
     margin: auto;
     margin-bottom: 2rem;
-    max-width: 32rem;
+    max-width: 36rem;
     background-color: var(--bg);
     color: var(--f-color);
 
@@ -198,11 +198,15 @@ footer nav div:last-of-type {
 /*     margin-left: -0.25em; */
 /* } */
 
-:root {
-    font-size: clamp(17px, 4vw, 20px);
-}
+/* :root { */
+/*     font-size: clamp(17px, 4vw, 20px); */
+/* } */
 
 @media (min-width: 1000px) {
+    :root {
+        font-size: 17px;
+    }
+
     header nav {
         font-size: 1rem;
         max-width: 4rem;
